test/expected/explain_fdan_v.out
explain void f(double d, int x[d])
                              ^
31: error: invalid array dimension type "double"; must be integral
